Fix size of image on mobile view

--- a/src/app/features/image-editor/components/edit-image/edit-image.component.scss
+++ b/src/app/features/image-editor/components/edit-image/edit-image.component.scss
@@ -26,6 +26,7 @@
   padding: 5px 15px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .btn {
