--- a/src/app/features/image-editor/pages/image-editor-edit/image-editor-edit.component.scss
+++ b/src/app/features/image-editor/pages/image-editor-edit/image-editor-edit.component.scss
@@ -8,9 +8,6 @@
     'header'
     'edit'
     'footer';
-
-  @media only screen and (min-width: 640px) {
-  }
 }
 
 app-shared-header {
